<?xml version="1.0"?>
<package>
  <name>roslisp_tutorials</name>
  <version>0.0.0</version>
  <description>A metapackage for roslisp tutorials</description>
  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/roslisp_tutorials</url>
  <url type="repository">https://github.com/gaya-/roslisp_tutorials</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>roslisp_tutorials_basics</run_depend>
  <run_depend>roslisp_tutorials_turtles</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
