<?xml version="1.0"?>
<package>
  <name>roslisp_tutorials_basics</name>
  <version>0.0.0</version>
  <description>Code for tutorials on basics of roslisp</description>

  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
  <author>Bhaskara Marthi</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
