<?xml version="1.0"?>
<package>
  <name>roslisp_tutorials_turtlesim</name>
  <version>0.0.0</version>
  <description>Code for the second roslisp tutorial.</description>

  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>

  <license>BSD</license>
  <url type="repository">https://github.com/gaya-/roslisp_tutorials</url>
  <author>Thibault Kruse</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>turtlesim</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
